--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1546,12 +1546,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X=df.drop('class',axis=1)\n",
-    "y=df['class']"
+    "y=df['class']\n",
+    "#hi"
    ]
   },
   {
